# ArcWarden

./: .gitignore  ARCHITECTURE.md  ArcWarden-LShell_完整项目文档_v3.md  CMakeLists.txt  README.md  diag_test.csv  es_pic_step1_class_design.md  es_pic_step1_coding_plan.md  es_pic_step1_gpt_review_round1.md  gpu_darwin_pic_plan.md  learning_step10_depositor.md  learning_step11_pusher.md  learning_step12_diagnostics.md  learning_step13_simulation.md  learning_step14_physics_validation.md  learning_step1_cmake.md  learning_step2_cuda_utils.md  learning_step3_device_array.md  learning_step4_config.md  learning_step5_grid.md  learning_step6_spectral.md  learning_step7_sources_fields.md  learning_step8_solver_es.md  learning_step9_particles.md  summary_step0-3_en.md  summary_step0-3_zh.md  two_stream_phase.csv
decks/: an2019_sim1.ini  an2019_sim2.ini  an2019_sim3.ini  bump_on_tail.ini  bump_vb04.ini  bump_vb06.ini  bump_vb08.ini  chen2022_hooked.ini  chen2026_case1.ini  chen2026_case1_df.ini  chen2026_case1_giant.ini  chen2026_case2.ini  chen2026_case2_df.ini  chen2026_case2_df_cav.ini  chen2026_case2_df_honest.ini  chen2026_case2_df_nr.ini  chen2026_case2_df_wn.ini  chen2026_case2_giant.ini  chen2026_case3.ini  chen2026_case3_df.ini  chen2026_case3_giant.ini  chen2026_gamma_box.ini  chirp1d_growth.ini  chirping_1d.ini  chirping_1d_chen.ini  chirping_1d_run2.ini  chirping_1d_tao.ini  chirping_1d_tao6.ini  chirping_1d_tao_df.ini  chirping_1d_tao_lo.ini  chirping_1d_tao_phase.ini  chirping_1d_tao_phase4.ini  chirping_1d_tao_trig.ini  chirping_2dpath.ini  eaw_case7.ini  eaw_case7_tiled.ini  profile.ini  two_stream.ini
docs/: BOUNDARY_STUDY.md  CHEN2026_REPRODUCTION.md  EAW_CASE7_REPRODUCTION.md  HOT_REP_ROUND1.md  PAPER_NOTES.md  PROFILE_BASELINE.md  TAO2017_REPRODUCTION.md  WEIGHT_PRECISION.md
include/pic/: background_b0.hpp  checkpoint.hpp  config.hpp  cuda_utils.hpp  deck.hpp  depositor.hpp  device_array.hpp  diagnostics.hpp  fft.hpp  fields.hpp  grid.hpp  hybrid1d.hpp  j0_analytic.hpp  particles.hpp  pump.hpp  pusher.hpp  run_meta.hpp  simulation.hpp  simulation_maxwell.hpp  solver_darwin.hpp  solver_es.hpp  sources.hpp  species.hpp  spectral.hpp  yee2d.hpp
include/pic/diag/: em_energy.hpp  kt.hpp  manager.hpp  module.hpp  phase_frames.hpp  phase_video.hpp  snapshot.hpp  spectrum.hpp
scripts/: budgeter.py  dispersion_bump.py  dispersion_compare.py  plot_bump_field.py  plot_bump_on_tail.py  plot_chen2026_fig1.py  plot_chen2026_giant.py  plot_chen2026_ht.py  plot_chirp1d.py  plot_chirp1d_hole_tracking.py  plot_chirp1d_tao_phase.py  plot_chirp2d.py  plot_eaw_case7.py  plot_eaw_case7_osiris.py  plot_phase_movie.py  plot_two_stream.py  plot_whistler_dispersion.py  plot_whistler_kt.py  plot_whistler_phase.py  plot_whistler_sim1.py  plot_whistler_snap.py  plot_whistler_video.py  whistler_kinetic_dispersion.py
sessions/: 2026-06-28_darwin_whistler_dialog.md  README.md
src/: main.cpp
tests/: test_boundary_vacuum.cu  test_boundary_whistler.cu  test_charge_conservation.cu  test_checkpoint_format.cu  test_chirp1d_dispersion.cu  test_chirp1d_growth.cu  test_chirp1d_mirror.cu  test_cold_fluid_dispersion.cu  test_conservation_longrun.cu  test_darwin_magnetostatic.cu  test_deltaf_consistency.cu  test_deltaf_equilibrium.cu  test_deltaf_growth.cu  test_deltaf_landau.cu  test_deltaf_mirror_hold.cu  test_diagnostics.cu  test_dipole_profile.cu  test_esirkepov_continuity.cu  test_fft_roundtrip.cu  test_langmuir.cu  test_magnetized_boris.cu  test_particle_load.cu  test_poisson_sine.cu  test_single_particle.cu  test_two_stream.cu  test_weibel.cu  test_yee_langmuir.cu  test_yee_mirror_bounce.cu  test_yee_tiled.cu  test_yee_vacuum.cu  test_yee_vs_darwin_lowfreq.cu
tools/: an2019_yee.cu  arcsim.cu  boundary_reflection.cu  bump_on_tail_movie.cu  chirp1d.cu  chirp2d.cu  deposit_bench.cu  eaw2d_yee.cu  run_deck.cu  two_stream_movie.cu  weight_precision.cu  whistler_pump.cu
